<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search_Existing_Records">

    <EditText
        android:id="@+id/name_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="209dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/enter_patient_s_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/id_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:ems="10"
        android:hint="@string/enter_patient_s_id_number"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/search_fingerprint"
        app:layout_constraintStart_toStartOf="@+id/name_search"
        app:layout_constraintTop_toBottomOf="@+id/name_search" />

    <Button
        android:id="@+id/get_search_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="122dp"
        android:text="@string/get_records"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/search_fingerprint"
        app:layout_constraintTop_toBottomOf="@+id/search_fingerprint" />

    <TextView
        android:id="@+id/search_fingerprint"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="76dp"
        android:text="@string/fingerprint"
        app:layout_constraintBottom_toTopOf="@+id/get_search_records"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_search" />
</androidx.constraintlayout.widget.ConstraintLayout>